--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@ body, .app {
 }
 .book-title {
   margin-top: 10px;
+
 }
 .book-authors {
   color: #999;
@@ -171,4 +172,10 @@ body, .app {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
+}
+.book-cover-subtitle {
+
+  text-align:justify;
+  font-size: 0.7em;
+  color: green;
 }
